﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:

	Code Changes:

	Bug fixes:


Version 1.4.2.12141 (v1.4.2 RTM) 2012-05-20
	Bug fixes:
		-There was a bug in the SimpleInjector.Extensions.LifetimeScoping.dll, which made it impossible to
		 register instances (with a different lifestyle than Lifetime Scope) for disposal, when no services
		 where registered with the Lifetime Scope lifestyle.


Version 1.4.2.12140 (v1.4.2 RTM) 2012-05-19
	General description:
		The extensions project now contains 'RegisterDecorator' extension methods that replace the old
		'RegisterOpenGenericDecorator' extension methods. The new methods allow registering both generic and
		non-generic decorators. Integration projects have been added to the solution, which should make it
		easier to integrate Simple Injector with ASP.NET.

	Project Changes:
		-New projects that were added to the solution:
			+SimpleInjector.Integration.Web (.NET 4.0)
			 Adds extension methods for Per Web Request lifestyle. This assembly takes a dependency on 
			 .NET 4.0 to allow the needed HTTP Module to be auto registered on application start-up.
			+SimpleInjector.Integration.Web.WebForms (.NET 3.5)
			 Adds extension methods for registering Page and UserControl classes.
			+SimpleInjector.Integration.Web.Mvc (.NET 4.0)
			 Adds extension methods for adding the container as Dependency Resolver (MVC3 / .NET 4) and
			 registering all Controller classes.
			+SimpleInjector.Extensions.LifetimeScoping (.NET 4.0)
			 Adds extension methods for Lifetime Scope lifestyle. This functionality can not be placed in 
			 SimpleInjector.Extensions, because it has a dependency on .NET 4.0 (makes use of ThreadLocal<T>), 
			 while SimpleInjector.Extensions must stay compatible with .NET 3.5 (for now).
			+SimpleInjector.Packaging (.NET 3.5) allows bundling sets of related services and register them
			 together.

	Code Changes: