@@ -6,6 +6,8 @@ Version vNext
 	Code Changes:
 
 	Bug fixes:
+		-[Core] Container did not self-register when created with Container(ContainerOptions) ctor.
+		 (work item 18139)
 
 
 Version 1.4.2.12141 (v1.4.2 RTM) 2012-05-20
